# dcm-toolbox

./: AGENTS.md  Cargo.toml  README.md
src/: analyze.rs  convert.rs  main.rs  utils.rs
src/convert/: jpeg.rs  stl.rs  video.rs
tests/: integration_tests.rs
