[package]
name = "dcm-converter"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
dicom = "0.9.0"
dicom-pixeldata = { version = "0.9.0", features = ["image"] }
image = "0.25.9"
anyhow = "1.0.100"
tempfile = "3.24.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
