[package]
name = "dcm-toolbox"
version = "0.3.0"
edition = "2024"
rust-version = "1.92.0"
description = "A CLI tool for converting DICOM medical image files to JPEG images, MP4 videos, or STL 3D models"
repository = "https://github.com/THernandez03/dcm-toolbox"
readme = "README.md"
license = "MIT"
keywords = ["dicom", "medical-imaging", "stl", "converter", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["/in", "/out"]

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
dicom = "0.9.0"
dicom-pixeldata = { version = "0.9.0", features = ["image"] }
image = "0.25.9"
anyhow = "1.0.101"
tempfile = "3.24.0"
lin_alg = "1.3.14"
mcubes = "0.1.7"
stl_io = "0.10.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
